<resources>
    <string name="jyc_date_picker_sunday">日</string>
    <string name="jyc_date_picker_monday">一</string>
    <string name="jyc_date_picker_tuesday">二</string>
    <string name="jyc_date_picker_wednesday">三</string>
    <string name="jyc_date_picker_thursday">四</string>
    <string name="jyc_date_picker_friday">五</string>
    <string name="jyc_date_picker_saturday">六</string>
</resources>
